--- a/sync/core.entity_view_display.node.game.teaser.yml
+++ b/sync/core.entity_view_display.node.game.teaser.yml
@@ -18,6 +18,7 @@ content:
   links:
     weight: 100
 hidden:
+  field_com: true
   field_date: true
   field_group_reference: true
   field_location: true
