--- a/sync/field.field.node.game.field_location.yml
+++ b/sync/field.field.node.game.field_location.yml
@@ -23,5 +23,5 @@ settings:
       locations: locations
     sort:
       field: _none
-    auto_create: false
+    auto_create: true
 field_type: entity_reference
